feat: improve indexing performance (#8)
* feat: enhance document indexing with section tracking

* feat: update indentation settings to enforce 4 spaces for consistency

* feat: enhance Indexer and DatabaseHelper with transaction management and batch insert functionality

* feat: add tests for updating document metadata and batch inserting document words

* feat: refactor Indexer to use Tokenizer for document tokenization and add Tokenizer class

* fix: fix IndexerTests to include Tokenizer mock and update setup for tokenization

* fix: unnecessary stubbings detected restriction

* refactor: rewrite empty comment

* feat: update DatabaseHelper to add word counts across documents

* fix: format SQL update statement